--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!-- Begin of logo/brand -->
     <a class="navbar-brand" href="./#">
       <span class="logo">
-        <img class="light-logo" src="img/logo.png" alt="Logo">
+        <img class="light-logo" src="img/icons/ps.png" alt="Logo">
       </span>
       <span class="text">
         <span class="line">Paul Su</span>
