saving mailchip api

--- a/index.html
+++ b/index.html
@@ -745,7 +745,7 @@
                 <div class="anim-2">
                   <h2 class="display-4 display-title">Contact</h2>
                   <p>I am currently seeking work and project opportunities.
-                    <br>Contact me if your interested in working together.</br>
+                    <br>Contact me if you're interested in working together.</br>
                   </p>
                 </div>
                 <div class="address-container anim-3">
