adding projects and fixed target links

--- a/index.html
+++ b/index.html
@@ -258,10 +258,10 @@
                         <h3 class="title">Paul Su</h3>
                         <h4>Front-end Developer</h4>
                         <div class="icons">
-                          <a class="icon-btn" href="//linkedin.com/in/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//linkedin.com/in/paulcysu">
                             <i class="icon fa fa-linkedin"></i>
                           </a>
-                          <a class="icon-btn" href="//github.com/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//github.com/paulcysu">
                             <i class="icon fa fa-github"></i>
                           </a>
                         </div>
@@ -278,10 +278,10 @@
                         <h3 class="title">Paul Su</h3>
                         <h4>UX/UI Enthusiant</h4>
                         <div class="icons">
-                          <a class="icon-btn" href="//linkedin.com/in/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//linkedin.com/in/paulcysu">
                             <i class="icon fa fa-linkedin"></i>
                           </a>
-                          <a class="icon-btn" href="//github.com/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//github.com/paulcysu">
                             <i class="icon fa fa-github"></i>
                           </a>
                         </div>
@@ -298,10 +298,10 @@
                         <h3 class="title">Paul Su</h3>
                         <h4>Reader</h4>
                         <div class="icons">
-                          <a class="icon-btn" href="//linkedin.com/in/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//linkedin.com/in/paulcysu">
                             <i class="icon fa fa-linkedin"></i>
                           </a>
-                          <a class="icon-btn" href="//github.com/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//github.com/paulcysu">
                             <i class="icon fa fa-github"></i>
                           </a>
                         </div>
@@ -318,10 +318,10 @@
                         <h3 class="title">Paul Su</h3>
                         <h4>Gamer</h4>
                         <div class="icons">
-                          <a class="icon-btn" href="//linkedin.com/in/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//linkedin.com/in/paulcysu">
                             <i class="icon fa fa-linkedin"></i>
                           </a>
-                          <a class="icon-btn" href="//github.com/paulcysu">
+                          <a target="_blank" class="icon-btn" href="//github.com/paulcysu">
                             <i class="icon fa fa-github"></i>
                           </a>
                         </div>
@@ -358,10 +358,10 @@
         <div class="slide-wrapper">
           <div class="item-wrapper">
             <div class="illustr">
-              <img class="img img-block" src="img/projects/stand_app_iphone.png" alt="Image">
+              <img class="img img-block" src="img/projects/stand_app_player.png" alt="Image">
             </div>
             <div class="legend">
-              <a href="item.html#project_url">
+              <a target="_blank" href="https://standapp.live">
                 <h3>Stand App</h3>
                 <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, Cloudfront</h4>
                 <p>A comedy stand up appplication, where comedians and audio creators can record their performances and share their works with others.</p>
@@ -384,20 +384,20 @@
         <div class="slide-wrapper">
           <div class="item-wrapper">
             <div class="illustr">
-              <img class="img img-block" src="img/airplane.jpg" alt="Image">
+              <img class="img img-block" src="img/projects/steady_eats_wide.png" alt="Image">
             </div>
             <div class="legend">
-              <a href="item.html#project_url">
+              <a target="_blank" href="./projects/steady_eats/index.html">
                 <h3>Steady Eats</h3>
                 <h4>HTML5, CSS3, JS, Materialize CSS, Agile</h4>
                 <p>Food nutrition search engine with Yelp and Google Maps API integration</p>
               </a>
-              <a class="btn btn-transp-arrow btn-primary" href="item.html#project_url">
+              <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/steady_eats/index.html">
                 <span class="text">Live Website</span>
                 <span class="icon arrow-right"></span>
               </a>
               <div class="icons">
-                <a class="icon-btn" href="https://github.com/ryankang2/c6.18_hackathon2">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/c6.18_hackathon2">
                   <i class="icon fa fa-github"></i>
                 </a>
               </div>
@@ -410,20 +410,20 @@
         <div class="slide-wrapper">
           <div class="item-wrapper">
             <div class="illustr">
-              <img class="img img-block" src="img/bonfire.jpg" alt="Image">
+              <img class="img img-block" src="img/projects/injustice.png" alt="Image">
             </div>
             <div class="legend">
-              <a href="item.html#project_url">
-                <h3>Memory Match</h3>
+              <a target="_blank" href="./projects/injustice/index.html">
+                <h3>Injustice Battle</h3>
                 <h4>HTML5, CSS3, JS</h4>
                 <p>A two-player matching card game matched card to battle</p>
               </a>
-              <a class="btn btn-transp-arrow btn-primary" href="item.html#project_url">
+              <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/injustice/index.html">
                 <span class="text">Live Website</span>
                 <span class="icon arrow-right"></span>
               </a>
               <div class="icons">
-                <a class="icon-btn" href="https://github.com/paulcysu/memory_match">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/injustice_match_game">
                   <i class="icon fa fa-github"></i>
                 </a>
               </div>
@@ -465,19 +465,19 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/items/img-sample9-square.jpg" alt="An image">
+                <img class="" src="img/projects/stand_app_newsfeed.png" alt="An image">
               </div>
               <div class="media-body">
-                <a href="item.html#project_url">
+                <a target="_blank" href="https://standapp.live">
                   <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, Cloudfront</h4>
                   <h3>Stand App</h3>
                 </a>
               </div>
               <div class="media-footer">
-                <a class="icon-btn" href="https://github.com/paulcysu/memory_match">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/injustice_match_game">
                   <i class="icon fa fa-github"></i>
                 </a>
-                <a class="btn btn-transp-arrow btn-primary" href="https//standapp.live">
+                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="https://standapp.live">
                   <span class="text">Live Website</span>
                   <span class="icon arrow-right"></span>
                 </a>
@@ -486,19 +486,19 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/items/img-sample10-square.jpg" alt="An image">
+                <img class="" src="img/projects/steady_eats_info.png" alt="An image">
               </div>
               <div class="media-body">
-                <a href="item.html#project_url">
+                <a target="_blank" href="./projects/steady_eats/index.html">
                   <h4>HTML5, CSS3, JS, Materialize CSS, Agile</h4>
                   <h3>Steady Eats</h3>
                 </a>
               </div>
               <div class="media-footer">
-                <a class="icon-btn" href="https://github.com/ryankang2/c6.18_hackathon2">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/c6.18_hackathon2">
                   <i class="icon fa fa-github"></i>
                 </a>
-                <a class="btn btn-transp-arrow btn-primary" href="item.html">
+                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/steady_eats/index.html">
                   <span class="text">Live Website</span>
                   <span class="icon arrow-right"></span>
                 </a>
@@ -507,19 +507,19 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/items/img-sample11-square.jpg" alt="An image">
+                <img class="" src="img/projects/injustice_mobile.png" alt="An image">
               </div>
               <div class="media-body">
-                <a href="item.html#project_url">
-                  <h4>HTML5, CSS3, JS</h4>
-                  <h3>Memory Match</h3>
+                <a target="_blank" href="./projects/injustice/index.html">
+                  <h4>HTML5, CSS3, Javascript</h4>
+                  <h3>Injustice Battle</h3>
                 </a>
               </div>
               <div class="media-footer">
-                <a class="icon-btn" href="https://github.com/paulcysu/memory_match">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/injustice_match_game">
                   <i class="icon fa fa-github"></i>
                 </a>
-                <a class="btn btn-transp-arrow btn-primary" href="item.html">
+                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/injustice/index.html">
                   <span class="text">Live Wesbite</span>
                   <span class="icon arrow-right"></span>
                 </a>
@@ -754,13 +754,13 @@
                     <div class="col-12 col-md-6 col-lg-6">
                       <h4>Contact</h4>
                       <p>Call: (213) 344-8476</p>
-                      <p>Email: su.paul.cy@gmail.com</p>
+                      <p>Email: <a href="mailto:su.paul.cy@gmail.com">su.paul.cy@gmail.com</a></p>
 
                       <div class="icons icons-margin">
-                        <a class="icon-btn" href="//linkedin.com/in/paulcysu">
+                        <a target="_blank" class="icon-btn" href="//linkedin.com/in/paulcysu">
                           <i class="icon fa fa-linkedin"></i>
                         </a>
-                        <a class="icon-btn" href="//github.com/paulcysu">
+                        <a target="_blank" class="icon-btn" href="//github.com/paulcysu">
                           <i class="icon fa fa-github"></i>
                         </a>
                       </div>
@@ -832,12 +832,12 @@
       </p>
       <ul class="social">
         <li>
-          <a href="//linkedin.com/in/paulcysu">
+          <a target="_blank" href="//linkedin.com/in/paulcysu">
             <i class="icon fa fa-linkedin"></i>
           </a>
         </li>
         <li>
-          <a href="//github.com/paulcysu">
+          <a target="_blank" href="//github.com/paulcysu">
             <i class="icon fa fa-github"></i>
           </a>
         </li>
