--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0">
 
   <!-- Twitter Meta -->
-  <meta name="twitter:site" content="@paulsudesign">
+  <!-- <meta name="twitter:site" content="@paulsudesign">
   <meta name="twitter:creator" content="@paulsudesign">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="Paul Su">
   <meta name="twitter:description" content="Description of the page">
-  <meta name="twitter:image" content="/img/bg-default.jpg">
+  <meta name="twitter:image" content="/img/bg-default.jpg"> -->
 
   <!-- Web fonts and Web Icons -->
   <link rel="stylesheet" href="./fonts/opensans/stylesheet.css">
@@ -548,8 +548,8 @@
     <!-- Begin of list feature section -->
     <div class="section section-list-feature fp-auto-height-responsive " data-section="skills">
       <!-- section cover -->
-      <div class="section-cover-full bg-img" data-image-src="./img/sections/services.png">
-      </div>
+      <!-- <div class="section-cover-full bg-img" data-image-src="./img/sections/services.png">
+      </div> -->
 
       <!-- Begin of section wrapper -->
       <div class="section-wrapper fullwidth with-margin">
@@ -730,7 +730,7 @@
     <!-- Begin of contact section -->
     <div class="section section-contact fp-auto-height-responsive no-slide-arrows " data-section="contact">
       <!-- section cover -->
-      <div class="section-cover-full bg-img" data-image-src="./img/sections/contact.png">
+      <div class="section-cover-full bg-img" data-image-src="./img/hello.jpg">
       </div>
 
       <!-- Begin of slide section wrapper -->
