--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   <li class="slide-item swiper-slide">
                     <div class="item-wrapper">
                       <div class="illustr">
-                        <img src="img/person.jpg" alt="Image" class="img">
+                        <img src="img/paul.jpg" alt="Image" class="img">
                       </div>
                       <div class="legend">
                         <h3 class="title">Paul Su</h3>
@@ -462,7 +462,7 @@
               <a target="_blank" href="https://dev.standapp.live">
                 <h3>Stand App</h3>
                 <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
-                <p>A comedy stand up appplication, where comedians and audio creators can record their performances and share their works with others.</p>
+                <p>A comedy stand up application, where comedians and audio creators can record their performances and share their works with others.</p>
               </a>
               <a class="btn btn-transp-arrow btn-primary" target="_blank" href="https://dev.standapp.live">
                 <span class="text">Live Website</span>
