--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/injustice_match_game">
                   <i class="icon fa fa-github"></i>
                 </a>
-                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="https://dev.standapp.live">
+                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="https://standapp.live">
                   <span class="text">Live Website</span>
                   <span class="icon arrow-right"></span>
                 </a>
@@ -459,12 +459,12 @@
               <img class="img img-block" src="img/projects/stand_app_player.png" alt="Image">
             </div>
             <div class="legend">
-              <a target="_blank" href="https://dev.standapp.live">
+              <a target="_blank" href="https://standapp.live">
                 <h3>Stand App</h3>
                 <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
                 <p>A comedy stand up application, where comedians and audio creators can record their performances and share their works with others.</p>
               </a>
-              <a class="btn btn-transp-arrow btn-primary" target="_blank" href="https://dev.standapp.live">
+              <a class="btn btn-transp-arrow btn-primary" target="_blank" href="https://standapp.live">
                 <span class="text">Live Website</span>
                 <span class="icon arrow-right"></span>
               </a>
