dev testing good, changed resume link

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-white btn-round" target="_blank" href="https://docs.google.com/document/d/11JiaUi37BtIgDzxJw35v6FSNMDcIPAEd63AH_egrFfI/edit?usp=sharing">
+            <a class="btn btn-outline-white btn-round" target="_blank" href="https://drive.google.com/file/d/1xRL7R1tMFy36yn5VO9mNOLJP_QUFzOr6/view?usp=sharing">
               Resume
             </a>
           </li>
@@ -124,7 +124,7 @@
             <a class="nav-link" href="/#projects">Projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" target="_blank" href="https://docs.google.com/document/d/11JiaUi37BtIgDzxJw35v6FSNMDcIPAEd63AH_egrFfI/edit?usp=sharing">Resume</a>
+            <a class="nav-link" target="_blank" href="https://drive.google.com/file/d/1xRL7R1tMFy36yn5VO9mNOLJP_QUFzOr6/view?usp=sharing">Resume</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/#contact">Contact</a>
