changing github links

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                 <!-- </a> -->
               </div>
               <div class="media-footer">
-                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/injustice_match_game">
+                <a target="_blank" class="icon-btn" href="https://github.com/Learning-Fuze/c618_standup">
                   <i class="icon fa fa-github"></i>
                 </a>
                 <a target="_blank" class="btn btn-transp-arrow btn-primary" href="https://standapp.live">
@@ -403,7 +403,7 @@
                 <!-- </a> -->
               </div>
               <div class="media-footer">
-                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/c6.18_hackathon2">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/steady_eats.git">
                   <i class="icon fa fa-github"></i>
                 </a>
                 <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/steady_eats/index.html">
@@ -495,7 +495,7 @@
                 <span class="icon arrow-right"></span>
               </a>
               <div class="icons">
-                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/c6.18_hackathon2">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/steady_eats.git">
                   <i class="icon fa fa-github"></i>
                 </a>
               </div>
