changed images and steady eat modal

--- a/index.html
+++ b/index.html
@@ -83,27 +83,27 @@
         <!-- Begin of CTA Actions, & Icons menu -->
         <ul class="navbar-nav navbar-nav-actions">
           <li class="nav-item">
-              <a class="btn btn-outline-white btn-round" href="/#about">
+              <a class="btn btn-round" href="/#about">
                 About
               </a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-white btn-round" href="/#projects">
+            <a class="btn btn-round" href="/#projects">
               Projects
             </a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-white btn-round" href="/#skills">
+            <a class="btn btn-round" href="/#skills">
               Skills
             </a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-white btn-round" target="_blank" href="https://drive.google.com/file/d/1xRL7R1tMFy36yn5VO9mNOLJP_QUFzOr6/view?usp=sharing">
+            <a class="btn btn-round" target="_blank" href="https://drive.google.com/file/d/1xRL7R1tMFy36yn5VO9mNOLJP_QUFzOr6/view?usp=sharing">
               Resume
             </a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-outline-white btn-round" href="/#contact">
+            <a class="btn btn-round" href="/#contact">
               Contact
             </a>
           </li>
@@ -228,7 +228,7 @@
 
               <!-- Action button -->
               <div class="btns-action anim-3">
-                <a class="btn btn-circicon btn-primary" href="#projects-featured">
+                <a class="btn btn-circicon btn-primary" href="#projects">
                   <span class="icon">
                     <i class="ion ion-chevron-down"></i>
                   </span>
@@ -750,7 +750,7 @@
                   <div class="row">
                     <div class="col-12 col-md-6 col-lg-6">
                       <h4>Contact</h4>
-                      <p id='number'></p>
+                      <p id='number'>Call: </p>
                       <p>Email: <a href="mailto:su.paul.cy@gmail.com" id='mail'></a></p>
 
                       <div class="icons icons-margin">
