change modal text

--- a/projects/injustice/index.html
+++ b/projects/injustice/index.html
@@ -79,9 +79,9 @@
                 <h3>About</h3>
                 <p>This is a two player game where players takes turn matching cards to recruit characters to battle after player two matches.</p>
                 <ul>
-                    <li>The player who takes opponent's health to zero wins.</li>
-                    <li>Player's turn ends until player has made a match.</li>
-                    <li>The battle between characters are determined by the programmer.</li>
+                    <li>The player who takes their opponent's health to zero wins.</li>
+                    <li>Player's turn ends until the player has made a match.</li>
+                    <li>Character's strength are determined by the number on the card.</li>
                     <li>Enjoy and have fun!</li>
                 </ul>
                 <button id="play">Play</button>
