--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <!-- BEGIN OF page cover -->
   <div class="page-cover" id="parallax-cover">
     <!-- Cover Background -->
-    <div data-depth="0.2" class="cover-bg bg-img" data-image-src="img/desk.jpg"></div>
+    <div data-depth="0.2" class="cover-bg bg-img" data-image-src="img/ocean_rocks.jpg"></div>
 
     <!-- Transluscent mask as filter -->
     <div class="cover-bg-mask bg-color" data-bgcolor="rgba(2, 3, 10, 0.1)"></div>
@@ -727,7 +727,7 @@
     <!-- Begin of contact section -->
     <div class="section section-contact fp-auto-height-responsive no-slide-arrows " data-section="contact">
       <!-- section cover -->
-      <div class="section-cover-full bg-img" data-image-src="./img/hello.jpg">
+      <div class="section-cover-full bg-img" data-image-src="./img/bottle_message.jpg">
       </div>
 
       <!-- Begin of slide section wrapper -->
