form validation complete

--- a/index.html
+++ b/index.html
@@ -786,15 +786,17 @@
                 <div class="form-group name">
                   <input id="mes-name" name="name" type="text" placeholder="Name" class="form-control form-control-outline thick form-success-clean"
                   >
+                  <label id="mes-name-error" class="error" for="mes-name"></label>
                 </div>
                 <div class="form-group email">
                   <input id="mes-email" placeholder="Email" name="email" class="form-control form-control-outline thick form-success-clean"
                   >
+                  <label id="mes-email-error" class="error" for="mes-email"></label>
                 </div>
                 <div class="form-group no-border">
                   <textarea id="mes-text" placeholder="Message ..." name="message" class="form-control form-control-outline thick form-success-clean"
                   ></textarea>
-
+                  <label id="mes-text-error" class="error" for="mes-text"></label>
                   <div>
                     <p class="message-ok invisible form-text-feedback form-success-visible">Your message has been sent, thank you.</p>
                   </div>
