--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <!-- </a> -->
               </div>
               <div class="media-footer">
-                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/steady_eats.git">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/steady_eats">
                   <i class="icon fa fa-github"></i>
                 </a>
                 <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/steady_eats/index.html">
@@ -495,7 +495,7 @@
                 <span class="icon arrow-right"></span>
               </a>
               <div class="icons">
-                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/steady_eats.git">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/steady_eats">
                   <i class="icon fa fa-github"></i>
                 </a>
               </div>
@@ -803,6 +803,7 @@
                 </div>
 
                 <div class="btns text-right">
+                  <img id='form_loader' src='./img/circle_loader.svg' alt='loader'>
                   <button id="submit-message" class="btn btn-outline-white btn-round btn-fullNot email_b"
                   name="submit_message">
                     <span class="txt">Send Now</span>
