saving project changes

--- a/projects/injustice/index.html
+++ b/projects/injustice/index.html
@@ -79,9 +79,10 @@
                 <h3>About</h3>
                 <p>This is a two player game where players takes turn matching cards to recruit characters to battle after player two matches.</p>
                 <ul>
-                    <li>The player who takes their opponent's health to zero wins.</li>
-                    <li>Player's turn ends until the player has made a match.</li>
-                    <li>Character's strength are determined by the number on the card.</li>
+                    <li>The player who takes their opponent's health to zero first wins.</li>
+                    <li>Player's turn ends when a pair of card is matched or 3 failed attempts are made.</li>
+                    <li>If player passes turn because of 3 failed attempts, that player will lose 1 health point.</li>
+                    <li>Card's strength is predetermined.</li>
                     <li>Enjoy and have fun!</li>
                 </ul>
                 <button id="play">Play</button>
