location and modal changes

--- a/index.html
+++ b/index.html
@@ -604,6 +604,15 @@
             <!-- an item -->
             <div class="item media">
               <div class="img">
+                <i class="devicon-nodejs-plain colored"></i>
+              </div>
+              <div class="media-body">
+                <h4>Node.js</h4>
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media">
+              <div class="img">
                 <i class="devicon-bootstrap-plain colored"></i>
               </div>
               <div class="media-body">
