--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                     </div>
                   </li>
                   <!-- item -->
-                  <li class="slide-item swiper-slide">
+                  <!-- <li class="slide-item swiper-slide">
                     <div class="item-wrapper">
                       <div class="illustr">
                         <img src="img/art.jpg" alt="Image" class="img">
@@ -287,7 +287,7 @@
                         </div>
                       </div>
                     </div>
-                  </li>
+                  </li> -->
                   <!-- item -->
                   <li class="slide-item swiper-slide">
                     <div class="item-wrapper">
@@ -309,7 +309,7 @@
                     </div>
                   </li>
                   <!-- item -->
-                  <li class="slide-item swiper-slide">
+                  <!-- <li class="slide-item swiper-slide">
                     <div class="item-wrapper">
                       <div class="illustr">
                         <img src="img/controller.jpg" alt="Image" class="img">
@@ -327,7 +327,7 @@
                         </div>
                       </div>
                     </div>
-                  </li>
+                  </li> -->
                 </ul>
               </div>
               <!-- pagination -->
@@ -372,7 +372,7 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/stand_app_newsfeed.png" alt="An image">
+                <img class="" src="img/projects/stand_app_newsfeed.jpg" alt="An image">
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="https://standapp.live"> -->
@@ -394,7 +394,7 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/steady_eats_info.png" alt="An image">
+                <img class="" src="img/projects/steady_eats_info.jpg" alt="An image">
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="./projects/steady_eats/index.html"> -->
@@ -415,7 +415,7 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/injustice_mobile.png" alt="An image">
+                <img class="" src="img/projects/injustice_mobile.jpg" alt="An image">
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="./projects/injustice/index.html"> -->
@@ -439,24 +439,24 @@
         </div>
 
         <!-- Arrows scroll down/up -->
-        <footer class="section-footer scrolldown">
+        <!-- <footer class="section-footer scrolldown">
           <a class="down">
             <span class="icon"></span>
             <span class="txt">Skills</span>
           </a>
         </footer>
-      </div>
+      </div> -->
       <!-- End of section wrapper -->
     </div>
     <!-- End of list projects section -->
 
     <!-- Begin of slider section -->
-    <div class="section section-twoside project-slider fp-auto-height-responsive " data-section="projects-featured">
+    <!-- <div class="section section-twoside project-slider fp-auto-height-responsive " data-section="projects-featured">
       <div class="slide">
         <div class="slide-wrapper">
           <div class="item-wrapper">
             <div class="illustr">
-              <img class="img img-block" src="img/projects/stand_app_player.png" alt="Image">
+              <img class="img img-block" src="img/projects/stand_app_player.jpg" alt="Image">
             </div>
             <div class="legend">
               <a target="_blank" href="https://standapp.live">
@@ -482,7 +482,7 @@
         <div class="slide-wrapper">
           <div class="item-wrapper">
             <div class="illustr">
-              <img class="img img-block" src="img/projects/steady_eats_wide.png" alt="Image">
+              <img class="img img-block" src="img/projects/steady_eats_wide.jpg" alt="Image">
             </div>
             <div class="legend">
               <a target="_blank" href="./projects/steady_eats/index.html">
@@ -508,7 +508,7 @@
         <div class="slide-wrapper">
           <div class="item-wrapper">
             <div class="illustr">
-              <img class="img img-block" src="img/projects/injustice.png" alt="Image">
+              <img class="img img-block" src="img/projects/injustice.jpg" alt="Image">
             </div>
             <div class="legend">
               <a target="_blank" href="./projects/injustice/index.html">
@@ -528,7 +528,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
 
 
       <!-- Arrows scroll down/up -->
