compressed images and css changes

--- a/index.html
+++ b/index.html
@@ -9,14 +9,6 @@
   <!-- Disable screen scaling-->
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-  <!-- Twitter Meta -->
-  <!-- <meta name="twitter:site" content="@paulsudesign">
-  <meta name="twitter:creator" content="@paulsudesign">
-  <meta name="twitter:card" content="summary">
-  <meta name="twitter:title" content="Paul Su">
-  <meta name="twitter:description" content="Description of the page">
-  <meta name="twitter:image" content="/img/bg-default.jpg"> -->
-
   <!-- Web fonts and Web Icons -->
   <link rel="stylesheet" href="./fonts/opensans/stylesheet.css">
   <link rel="stylesheet" href="./fonts/bebas/stylesheet.css">
@@ -71,7 +63,7 @@
     <!-- Begin of logo/brand -->
     <a class="navbar-brand" href="./#">
       <span class="logo">
-        <img class="light-logo" src="img/icons/ps.png" alt="Logo">
+        <img class="light-logo" src="img/icons/ps.png" alt="PS Logo">
       </span>
     </a>
     <!-- End of logo/brand -->
@@ -142,7 +134,7 @@
   <!-- BEGIN OF page cover -->
   <div class="page-cover" id="parallax-cover">
     <!-- Cover Background -->
-    <div data-depth="0.2" class="cover-bg bg-img" data-image-src="img/ocean_rocks.jpg"></div>
+    <div data-depth="0.2" class="cover-bg bg-img" data-image-src="img/ocean_rocks.jpg" alt="ocean background image"></div>
 
     <!-- Transluscent mask as filter -->
     <div class="cover-bg-mask bg-color" data-bgcolor="rgba(2, 3, 10, 0.1)"></div>
@@ -252,7 +244,7 @@
                   <li class="slide-item swiper-slide">
                     <div class="item-wrapper">
                       <div class="illustr">
-                        <img src="img/paul.jpg" alt="Image" class="img">
+                        <img src="img/paul.jpg" alt="paul_face" class="img">
                       </div>
                       <div class="legend">
                         <h3 class="title">Paul Su</h3>
@@ -292,7 +284,7 @@
                   <li class="slide-item swiper-slide">
                     <div class="item-wrapper">
                       <div class="illustr">
-                        <img src="img/books.jpg" alt="Image" class="img">
+                        <img src="img/books.jpg" alt="books" class="img">
                       </div>
                       <div class="legend">
                         <h3 class="title">Paul Su</h3>
@@ -372,7 +364,7 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/stand_app_newsfeed.jpg" alt="An image">
+                <img class="" src="img/projects/stand_app_newsfeed.jpg" alt="stand_app_newsfeed">
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="https://standapp.live"> -->
@@ -394,7 +386,29 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/steady_eats_info.jpg" alt="An image">
+                <img class="" src="img/projects/stand_app_newsfeed.jpg" alt="stand_app_newsfeed">
+              </div>
+              <div class="media-body">
+                <!-- <a target="_blank" href="https://standapp.live"> -->
+                  
+                  <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
+                  <h3>Stand App</h3>
+                <!-- </a> -->
+              </div>
+              <div class="media-footer">
+                <a target="_blank" class="icon-btn" href="https://github.com/Learning-Fuze/c618_standup">
+                  <i class="icon fa fa-github"></i>
+                </a>
+                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/spotify/dist/index.html">
+                  <span class="text">Live Website</span>
+                  <span class="icon arrow-right"></span>
+                </a>
+              </div>
+            </div>
+            <!-- an item -->
+            <div class="item media media-project">
+              <div class="media-img">
+                <img class="" src="img/projects/steady_eats_info.jpg" alt="steady_eats_image">
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="./projects/steady_eats/index.html"> -->
@@ -415,7 +429,7 @@
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/injustice_mobile.jpg" alt="An image">
+                <img class="" src="img/projects/injustice_mobile.jpg" alt="injustice_mobile">
               </div>
               <div class="media-body">
                 <!-- <a target="_blank" href="./projects/injustice/index.html"> -->
@@ -564,7 +578,7 @@
           </div>
 
           <!-- service list -->
-          <div class="service-list grid-2 grid-md-2 grid-lg-4 anim-list decor">
+          <div class="service-list grid-1 grid-md-2 grid-lg-4 anim-list decor">
             <!-- an item -->
             <div class="item media">
               <div class="img">
@@ -598,7 +612,7 @@
                 <i class="devicon-react-original colored"></i>
               </div>
               <div class="media-body">
-                <h4>React</h4>
+                <h4>React & Native</h4>
               </div>
             </div>
             <!-- an item -->
@@ -622,7 +636,7 @@
             <!-- an item -->
             <div class="item media">
               <div class="img">
-                <img src="img/icons/materialize.png">
+                <img src="img/icons/materialize.png" alt="materialize_logo">
               </div>
               <div class="media-body">
                 <h4>Materialize</h4>
@@ -631,7 +645,7 @@
             <!-- an item -->
             <div class="item media">
               <div class="img">
-                <img src="img/icons/redux.png">
+                <img src="img/icons/redux.png" alt="redux_logo">
               </div>
               <div class="media-body">
                 <h4>Redux</h4>
@@ -685,7 +699,7 @@
             <!-- an item -->
             <div class="item media">
               <div class="img">
-                  <img src="/img/icons/slack.png">
+                  <img src="/img/icons/slack.png" alt="slack_logo">
               </div>
               <div class="media-body">
                 <h4>Slack</h4>
@@ -694,7 +708,7 @@
             <!-- an item -->
             <div class="item media">
               <div class="img">
-                <img src="/img/icons/php.png">
+                <img src="/img/icons/php.png" alt="php_logo">
               </div>
               <div class="media-body">
                 <h4>PHP</h4>
@@ -703,7 +717,7 @@
             <!-- an item -->
             <div class="item media">
               <div class="img">
-                <img src="/img/icons/ajax.png">
+                <img src="/img/icons/ajax.png" alt="ajax_logo">
               </div>
               <div class="media-body">
                 <h4>AJAX</h4>
