--- a/index.html
+++ b/index.html
@@ -362,17 +362,17 @@
           <!-- project list -->
           <div class="project-list grid-1 grid-md-2 grid-lg-3 anim-list">
             <!-- an item -->
-            <div class="item media media-project">
+            <!-- <div class="item media media-project">
               <div class="media-img">
                 <img class="" src="img/projects/stand_app_newsfeed.jpg" alt="stand_app_newsfeed">
               </div>
-              <div class="media-body">
+              <div class="media-body"> -->
                 <!-- <a target="_blank" href="https://standapp.live"> -->
                   
-                  <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
-                  <h3>Stand App</h3>
+                  <!-- <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
+                  <h3>Stand App</h3> -->
                 <!-- </a> -->
-              </div>
+              <!-- </div>
               <div class="media-footer">
                 <a target="_blank" class="icon-btn" href="https://github.com/Learning-Fuze/c618_standup">
                   <i class="icon fa fa-github"></i>
@@ -382,24 +382,23 @@
                   <span class="icon arrow-right"></span>
                 </a>
               </div>
-            </div>
+            </div> -->
             <!-- an item -->
             <div class="item media media-project">
               <div class="media-img">
-                <img class="" src="img/projects/stand_app_newsfeed.jpg" alt="stand_app_newsfeed">
+                <img class="" src="img/projects/spotify.jpg" alt="spotify">
               </div>
               <div class="media-body">
-                <!-- <a target="_blank" href="https://standapp.live"> -->
-                  
-                  <h4>HTML5, CSS3, Bootstrap 4, JS, ReactJS, ReduxJS, PHP, mySQL, S3, CloudFront</h4>
-                  <h3>Stand App</h3>
+                <!-- <a target="_blank" href="https://paul-su-spotify.site"> -->
+                  <h4>React, HTML5, CSS3, Bootstrap 4, AWS, EC2, Ubuntu, Apache2</h4>
+                  <h3>Spotify Mockup</h3>
                 <!-- </a> -->
               </div>
               <div class="media-footer">
-                <a target="_blank" class="icon-btn" href="https://github.com/Learning-Fuze/c618_standup">
+                <a target="_blank" class="icon-btn" href="https://github.com/paulcysu/spotify_mockup">
                   <i class="icon fa fa-github"></i>
                 </a>
-                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="./projects/spotify/dist/index.html">
+                <a target="_blank" class="btn btn-transp-arrow btn-primary" href="https://paul-su-spotify.site">
                   <span class="text">Live Website</span>
                   <span class="icon arrow-right"></span>
                 </a>
